Fixed spacing in the sidebar as well as add a label to the search icon

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,15 @@ body {
     grid-template-rows: 1fr 3fr;
 }
 
+button {
+    cursor: pointer;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
 .header {
     background-color: white;
     grid-column: 2;
@@ -23,11 +32,7 @@ body {
     z-index: 2;
 }
 
-.header > * {
-    /* border: 1px solid black; */
-}
-
-.search-bar > img {
+.search-bar > label > img {
     width: 25px;
     height: 25px;
 }
@@ -111,7 +116,7 @@ body {
     grid-row: 1 / -1;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 15px;
 }
 
 .sidebar > * {
